Redefinindo e reorganizando o estilo

--- a/AdobePortfolio/lina-skukauské/css/style.css
+++ b/AdobePortfolio/lina-skukauské/css/style.css
@@ -1,59 +1,91 @@
-/* Reset */
+:root {
+  --secondary-color-passive-font: #6a7076;
+  --passive-font-color: #cbcbcb;
+  --active-font-color: #50555b;
+  font-size: 100%;
+}
 
-body,
-h1,
-ul,
-li {
+* {
   margin: 0;
   padding: 0;
 }
 
-/* General Settings */
-
+html,
 body {
+  height: 100vh;
   font-family: 'Raleway', sans-serif;
 }
 
-ul li {
-  list-style: none;
+header {
+  width: 100vw;
+  padding: 4.5rem 0;
+}
+
+#header-container {
+  margin-left: 15rem;
+}
+
+.main-title {
+  text-transform: uppercase;
+  color: var(--active-font-color);
+}
+
+.main-title:hover {
+  color: var(--secondary-color-passive-font);
+  transition: .5s;
+}
+
+#nav-container {
+  padding-top: 2rem;
+}
+
+#nav-container li {
+  display: inline;
+  text-transform: uppercase;
+  margin-right: 2rem;
 }
 
 a {
   text-decoration: none;
-  color: #cbcbcb;
-}
-
-/* Header */
-
-header {
-  padding: 70px 0 70px 200px;
-}
-
-.main-title {
-  color: #50555b;
-}
-
-.main-title:hover {
-  color: #6a7076;
-  transition: .5s;
-}
-
-h1 {
-  margin-bottom: 20px;
-  text-transform: uppercase;
-}
-
-ul li {
-  display: inline;
-  text-transform: uppercase;
-  margin-right: 30px;
+  color: var(--passive-font-color);
 }
 
 li a:hover {
-  color: #6a7076;
+  color: var(--secondary-color-passive-font);
   transition: .5s;
 }
 
-.active-option {
-  color: #50555b;
+.active-menu {
+  color: var(--active-font-color);
+}
+
+@media (max-width: 768px) {
+  #header-container {
+    margin-left: 30px;
+  }
+}
+
+@media (max-width: 425px) {
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #header-container {
+    margin-right: 30px;
+  }
+
+  .main-title {
+    font-size: 1.7rem;
+  }
+
+  li a {
+    margin-left: 30px;
+  }
+
+  #nav-container li {
+    display: block;
+    text-align: center;
+  }
 }
