--- a/AdobePortfolio/ludwig-favre/css/style.css
+++ b/AdobePortfolio/ludwig-favre/css/style.css
@@ -1,72 +1,101 @@
-/* Reser */
+:root {
+  --background-color: #000000;
+  --passive-font-color: #9c9c9c;
+  --active-font-color: #ffffff;
+  font-size: 60%; 
+}
 
-body,
-ul,
-li,
-h1 {
+* {
   margin: 0;
   padding: 0;
 }
 
-/* General Settings */
-
+html,
 body {
-  background: #000000;
+  width: 100vw;
+  background: var(--background-color);
   font-family: 'Oswald', sans-serif;
 }
 
-ul li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: #9c9c9c;
-  text-transform: uppercase;
-}
-
-h1 {
-  font-weight: normal;
-  text-transform: uppercase;
-}
-
-/* Header */
-
-header {
-  width: 95%;
+#header-container {
+  width: 95vw;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 4.5rem;
+  padding-bottom: 4.5rem;
 }
 
-ul li {
+#nav-container nav ul li {
+  list-style: none;
   display: inline;
-  margin-right: 20px;
+  margin-right: 2rem;
 }
 
-li a:hover {
-  color: #ffffff;
-  transition: .5s;
+#nav-container nav ul li a {
+  font-size: 1.8rem;
 }
 
-.active-option {
-  color: #ffffff;
+#nav-container li a:hover {
+  color: var(--active-font-color);
+  transition: 0.3s;
+}
+
+a {
+  text-decoration: none;
+  color: var(--passive-font-color);
+  text-transform: uppercase;
+}
+
+.active-menu {
+  color: var(--active-font-color);
 }
 
 .main-title {
-  color: #ffffff;
-  font-size: 25px;
+  color: var(--active-font-color);
+  font-size: 3rem;
+  font-weight: normal;
+  text-transform: uppercase;
 }
 
 .fab {
-  font-size: 20px;
-  margin-left: 20px;
+  font-size: 2.2rem;
+  margin-left: 2rem;
 }
 
 .fab:hover {
-  color: #ffffff;
-  transition: .5s;
+  color: var(--active-font-color);
+  transition: 0.5s;
+}
+
+@media (max-width: 425px) {
+  header #header-container {
+    width: 100vw;
+    display: block;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #nav-container,
+  #main-title-container,
+  #logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #nav-container {
+    margin-bottom: 0.5rem;
+    margin-left: 2rem;
+  }
+
+  #main-title-container {
+    margin-bottom: 3.3rem;
+    margin-left: 0.3rem;
+  }
+
+  #logo-container {
+    margin-left: -1.9rem;
+  }
 }
